Fix black bar on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,11 +31,10 @@
 body {
   color: var(--foreground-text);
   background: var(--aarde-bruin);
-  /* TODO fix black bar at bottom on mobile */
 }
 
 main {
-  /* height: 100%; */
+  min-height: 100vh;
 }
 
 .lucht {
